Remove jdescottes from properties file codeowners (#6918)

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
-# flod as main contact for string changes - jdescottes as backup
-assets/panel/debugger.properties @flodolo @juliandescottes
+# flod as main contact for string changes
+assets/panel/debugger.properties @flodolo
