--- a/src/test/mochitest/browser.ini
+++ b/src/test/mochitest/browser.ini
@@ -710,6 +710,7 @@ skip-if = os == "win"
 skip-if = os == "win"
 [browser_dbg-returnvalues.js]
 [browser_dbg-reload.js]
+[browser_dbg-reloading.js]
 [browser_dbg-pause-points.js]
 [browser_dbg-scopes-mutations.js]
 [browser_dbg-search-file.js]
