[SourceTree] Keyboard arrow behaviour integration tests (#6912)
* Add source tree keyboard integration tests

* Move sources arrow key tests to own file and share helper

* Use keys to get to bottom of source tree

--- a/src/test/mochitest/browser.ini
+++ b/src/test/mochitest/browser.ini
@@ -727,6 +727,7 @@ skip-if = os == "win" || (verify) # Bug 1434792
 [browser_dbg-sourcemaps-bogus.js]
 skip-if = os == 'linux' && !asan # bug 1447118
 [browser_dbg-sources.js]
+[browser_dbg-sources-arrow-keys.js]
 [browser_dbg-sources-named-eval.js]
 [browser_dbg-stepping.js]
 skip-if = debug || (verify && (os == 'win')) || (os == "win" && os_version == "6.1")
