--- a/assets/panel/debugger.properties
+++ b/assets/panel/debugger.properties
@@ -261,6 +261,10 @@ sourceSearch.search.key2=CmdOrCtrl+F
 # the source search input bar
 sourceSearch.search.placeholder=Search in file…
 
+# LOCALIZATION NOTE (sourceSearch.search.placeholder2): placeholder text in
+# the source search input bar
+sourceSearch.search.placeholder2=Find in file…
+
 # LOCALIZATION NOTE (sourceSearch.search.again.key2): Key shortcut to highlight
 # the next occurrence of the last search triggered from a source search
 # Do not localize "CmdOrCtrl+G", or change the format of the string. These are
@@ -304,6 +308,10 @@ searchPanelGlobal=Search in all files (%S)
 # LOCALIZATION NOTE (searchPanelFunction): This is the text that appears in the
 # filter panel popup for the function search operation.
 searchPanelFunction=Search for function definition (%S)
+
+# LOCALIZATION NOTE (searchPanelFunction2): This is the text that appears in the
+# filter panel popup for the function search operation.
+searchPanelFunction2=Find function definition (%S)
 
 # LOCALIZATION NOTE (searchPanelToken): This is the text that appears in the
 # filter panel popup for the token search operation.
@@ -617,10 +625,20 @@ watchExpressions.refreshButton=Refresh
 # a mac we use the unicode character.
 welcome.search=%S to search for sources
 
+# LOCALIZATION NOTE (welcome.search2): The center pane welcome panel's
+# search prompt. e.g. cmd+p to search for files. On windows, it's ctrl, on
+# a mac we use the unicode character.
+welcome.search2=%S Go to file
+
 # LOCALIZATION NOTE (welcome.findInFiles): The center pane welcome panel's
 # search prompt. e.g. cmd+f to search for files. On windows, it's ctrl+shift+f, on
 # a mac we use the unicode character.
 welcome.findInFiles=%S to find in files
+
+# LOCALIZATION NOTE (welcome.findInFiles2): The center pane welcome panel's
+# search prompt. e.g. cmd+f to search for files. On windows, it's ctrl+shift+f, on
+# a mac we use the unicode character.
+welcome.findInFiles2=%S Find in files
 
 # LOCALIZATION NOTE (welcome.searchFunction): Label displayed in the welcome
 # panel. %S is replaced by the keyboard shortcut to search for functions.
@@ -629,6 +647,10 @@ welcome.searchFunction=%S to search for functions in file
 # LOCALIZATION NOTE (sourceSearch.search): The center pane Source Search
 # prompt for searching for files.
 sourceSearch.search=Search sources…
+
+# LOCALIZATION NOTE (sourceSearch.search2): The center pane Source Search
+# prompt for searching for files.
+sourceSearch.search2=Go to file…
 
 # LOCALIZATION NOTE (sourceSearch.noResults2): The center pane Source Search
 # message when the query did not match any of the sources.
@@ -904,6 +926,10 @@ shortcuts.stepOut=Step Out
 # keyboard shortcut action for source file search
 shortcuts.fileSearch=Source File Search
 
+# LOCALIZATION NOTE (shortcuts.fileSearch2): text describing
+# keyboard shortcut action for source file search
+shortcuts.fileSearch2=Go to file
+
 # LOCALIZATION NOTE (shortcuts.gotoLine): text describing
 # keyboard shortcut for jumping to a specific line
 shortcuts.gotoLine=Go to line
@@ -912,13 +938,25 @@ shortcuts.gotoLine=Go to line
 # keyboard shortcut action for searching again
 shortcuts.searchAgain=Search Again
 
+# LOCALIZATION NOTE (shortcuts.searchAgain2): text describing
+# keyboard shortcut action for searching again
+shortcuts.searchAgain2=Find next
+
 # LOCALIZATION NOTE (shortcuts.projectSearch): text describing
 # keyboard shortcut action for full project search
 shortcuts.projectSearch=Full Project Search
 
+# LOCALIZATION NOTE (shortcuts.projectSearch2): text describing
+# keyboard shortcut action for full project search
+shortcuts.projectSearch2=Find in files
+
 # LOCALIZATION NOTE (shortcuts.functionSearch): text describing
 # keyboard shortcut action for function search
 shortcuts.functionSearch=Function Search
+
+# LOCALIZATION NOTE (shortcuts.functionSearch2): text describing
+# keyboard shortcut action for function search
+shortcuts.functionSearch2=Find function
 
 # LOCALIZATION NOTE (shortcuts.buttonName): text describing
 # keyboard shortcut button text
