Set accelerator text for context menu items (#6970)

--- a/assets/panel/debugger.properties
+++ b/assets/panel/debugger.properties
@@ -19,9 +19,10 @@ collapsePanes=Collapse panes
 copyToClipboard.label=Copy to clipboard
 copyToClipboard.accesskey=C
 
-# LOCALIZATION NOTE (copySource): This is the text that appears in the
+# LOCALIZATION NOTE (copySource.label): This is the text that appears in the
 # context menu to copy the selected source of file open.
 copySource=Copy
+copySource.label=Copy source text
 copySource.accesskey=y
 
 # LOCALIZATION NOTE (copySourceUri2): This is the text that appears in the
@@ -504,6 +505,7 @@ expressions.placeholder=Add watch expression
 expressions.errorMsg=Invalid expression…
 expressions.label=Add watch expression
 expressions.accesskey=e
+expressions.key=CmdOrCtrl+Shift+E
 
 # LOCALIZATION NOTE (sourceTabs.closeTab): Editor source tab context menu item
 # for closing the selected tab below the mouse.
