--- a/src/test/mochitest/browser.ini
+++ b/src/test/mochitest/browser.ini
@@ -581,6 +581,9 @@ support-files =
   examples/sourcemaps-reload/doc-sourcemaps-reload.html
   examples/sourcemaps-reload/doc-sourcemaps-reload2.html
   examples/sourcemaps-reload/doc-sourcemaps-reload3.html
+  examples/react/build/main.js
+  examples/react/build/main.js.map
+  examples/doc-react.html
   examples/wasm-sourcemaps/fib.c
   examples/wasm-sourcemaps/fib.wasm
   examples/wasm-sourcemaps/fib.wasm.map
@@ -734,6 +737,7 @@ skip-if = debug || (verify && (os == 'win')) || (os == "win" && os_version == "6
 [browser_dbg-tabs.js]
 [browser_dbg-tabs-pretty-print.js]
 [browser_dbg-toggling-tools.js]
+[browser_dbg-react-app.js]
 [browser_dbg-wasm-sourcemaps.js]
 [browser_dbg_rr_breakpoints-01.js]
 skip-if = os != "mac" || debug || !nightly_build
