[sync] Bug 1491879 - Fix telemetry support for multiple tabs / windows r=nchevobbe

--- a/packages/devtools-reps/package.json
+++ b/packages/devtools-reps/package.json
@@ -38,9 +38,9 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "devtools-config": "^0.0.15",
-    "devtools-launchpad": "^0.0.136",
+    "devtools-launchpad": "^0.0.137",
     "devtools-license-check": "^0.5.1",
-    "devtools-modules": "^0.0.38",
+    "devtools-modules": "~1.0",
     "devtools-services": "^0.0.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
