--- a/src/test/mochitest/browser.ini
+++ b/src/test/mochitest/browser.ini
@@ -715,6 +715,7 @@ skip-if = os == "win"
 [browser_dbg-returnvalues.js]
 [browser_dbg-reload.js]
 [browser_dbg-reloading.js]
+skip-if = true
 [browser_dbg-pause-points.js]
 [browser_dbg-scopes-mutations.js]
 [browser_dbg-search-file.js]
