Update source-map worker to use source-map 0.7.x (#7071)
* Remove unused wrapper function in Webpack config generation.
* Update yarn.lock for recent package.json changes.
* Add a general concept of assets to the source-map worker.
* Upgrade the source-map module for WASM performance.
* Centralize sourcemap consumer construction.

--- a/packages/devtools-source-map/package.json
+++ b/packages/devtools-source-map/package.json
@@ -9,6 +9,9 @@
   "homepage":
     "https://github.com/devtools-html/debugger.html/tree/master/packages/source-maps#readme",
   "main": "src/index.js",
+  "browser": {
+    "./src/utils/wasmAsset.js": "./src/utils/wasmAssetBrowser.js"
+  },
   "scripts": {
     "license-check": "devtools-license-check",
     "test": "jest --projects jest.config.js"
@@ -19,6 +22,6 @@
     "devtools-utils": "0.0.14",
     "md5": "^2.2.1",
     "regenerator-runtime": "^0.10.3",
-    "source-map": "^0.6.1"
+    "source-map": "^0.7.3"
   }
 }
