--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "babel-preset-react": "^6.24.1",
     "chalk": "^2.1.0",
     "copy-paste": "^1.3.0",
+    "copy-webpack-plugin": "^4.5.2",
     "devtools-license-check": "^0.7.0",
     "documentation": "^5.2.1",
     "enzyme": "^3.3.0",
