--- a/.travis.yml
+++ b/.travis.yml
@@ -64,4 +64,5 @@ script:
     browser_webconsole_eval_in_debugger_stackframe2.js
     browser_webconsole_location_debugger_link.js
     browser_webconsole_stacktrace_location_debugger_link.js
+    browser_webconsole_sourcemap_nosource
   - ./node_modules/.bin/mochii --ci --mc ./firefox --headless devtools/client/debugger/new
