UI for XHR Breakpoints (#6934)

--- a/src/test/mochitest/browser.ini
+++ b/src/test/mochitest/browser.ini
@@ -589,6 +589,8 @@ support-files =
   examples/wasm-sourcemaps/fib.wasm
   examples/wasm-sourcemaps/fib.wasm.map
   examples/wasm-sourcemaps/utils.js
+  examples/fetch.js
+  examples/doc-xhr.html
   examples/sum/sum.js
   examples/sum/sum.min.js
   examples/sum/sum.min.js.map
@@ -653,6 +655,7 @@ support-files =
 [browser_dbg-asm.js]
 [browser_dbg-async-stepping.js]
 [browser_dbg-sourcemapped-breakpoint-console.js]
+[browser_dbg-xhr-breakpoints.js]
 skip-if = (os == "win" && ccov) # Bug 1453549
 [browser_dbg-sourcemapped-scopes.js]
 skip-if = ccov || (verify && debug && (os == 'linux')) # Bug 1441545
